--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@ body, html {
     line-height: 1.6;
     color: #333;
 }
-
+        .logo-container {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .logo {
+            max-width: 300px;
+        }
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -176,6 +182,9 @@ h1 {
     </style>
 </head>
 <body>
+            <div class="logo-container">
+        <img src="https://cdn.shopify.com/s/files/1/0007/4583/2508/files/Advexure_New_Logo.png?v=1696728948" alt="Advexure Logo" class="logo">
+    </div>
     <div class="container">
         <h1>Hensel Phelps Storyboard</h1>
         
