--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ h1 {
     height: auto;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    object-fit: cover;
+    object-fit: cover !important;
 }
 @keyframes floatIn {
     0% {
@@ -164,7 +164,7 @@ h1 {
             margin-top: 20px;
         }
         .nav-button {
-            padding: 10px 20px;
+            padding: 0px 20px;
             background-color: #94C43E;
             color: white;
             border: none;
