--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@ h1 {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
+        object-fit: cover;
+        margin-bottom: 0px;
+
     }
 
     .scene-images img {
