--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@ h1 {
             .scene-images img {
                 max-width: 100px;
             }
+            .navigation {
+            margin-top: -10px;
         }
     </style>
 </head>
