--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ h1 {
             }
             .scene-images img {
                 max-width: 100px;
+                object-fit: cover;
             }
             .navigation {
             margin-top: -10px;
